<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 Just-CAF

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="justcaf_options_title">Just CAF -options</string>
    <string name="justcaf_options_summary">Device options</string>

    <!-- Categories -->
    <string name="system_title">System options</string>
    <string name="system_summary">Change system option like DT2W, etc.</string>
    <string name="statusbar_title">Statusbar</string>
    <string name="statusbar_summary">Change the statusbar option, clock, etc.</string>
    
    <!-- Clock faces -->
    <string name="clock_face_default">Default</string>
    <string name="clock_face_analog">Analog</string>
    <string name="clock_face_bubble">Bubble</string>
    <string name="clock_face_text">Text</string>
    
    <!-- Tap2wake -->
    <string name="tap_to_wake">Tap to wake</string>
    <string name="tap_to_wake_summary">Double-tap anywhere on the screen to wake device</string>
    
    <!-- Battery -->
    <string name="status_bar_battery_title">Battery indicator</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_square">Square</string>
    <string name="status_bar_battery_style_solid">Solid</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_style_q">Q style</string>	

    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_summary">Show battery percentage in status bar</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_text_position_title">Battery percent position</string>
    <string name="status_bar_battery_text_position_left">Left of the icon</string>
    <string name="status_bar_battery_text_position_right">Right of the icon</string>
    <string name="status_bar_battery_text_charging_title">Battery percentage when charging</string>
    <string name="status_bar_battery_text_charging_summary">Always display battery percentage when charging</string>

    <string name="battery_percentage_title">Battery percentage</string>
    <string name="battery_percentage_off">Disabled</string>
    <string name="battery_percentage_next">Enabled</string>
    <string name="battery_percentage_inside">Enabled (inside icon)</string>
    <string name="battery_percentage_estimate">Enabled (estimate)</string>

    <string name="show_emergency_button">Show emergency button in power menu</string>
</resources>

