<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 Just-CAF

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/justcaf_options_title" >
    
        <Preference
            android:key="system_category"
            android:title="@string/system_title"
            android:summary="@string/system_summary"          
            android:fragment="org.justcaf.options.fragments.System"/>

        <Preference
            android:key="statusbar_category"
            android:title="@string/statusbar_title"
            android:summary="@string/statusbar_summary"          
            android:fragment="org.justcaf.options.fragments.Statusbar"/>
    
        <ListPreference
            android:key="android.theme.customization.clock_Face"
            android:title="@string/theme_customization_clock_Face"
            android:summary="%s"
            android:entries="@array/lock_screen_clock_face_entries"
            android:entryValues="@array/lock_screen_clock_face_values"
            android:defaultValue="0"/>

        <Preference
            android:key="lockscreen_category"
            android:title="@string/lockscreen_title"
            android:summary="@string/lockscreen_title"          
            android:fragment="org.justcaf.options.fragments.Lockscreen"/>
            
</PreferenceScreen>
